tdf#106304: Fix newline and empty paragraph font size issues in .pptx export

Output <a:br> instead of &#10; for hard newlines. This fixes the
problem that the line before the hard newline in the .pptx export is
not centred.

The fix for the sd_export_ooxml1 test is a bit hacky, but then so is
the code in question.

Don't unnecessarily use bogus default char size for a:endParaRPr.
Instead use the size last used for an a:rPr below the same WriteText()
call. I am not exactly sure about how this hangs together, but this
has the desired effect on the exported .pptx.

(cherry picked from commit 1154cda87d518156d1e52dfb81d5e23b32ab23d5)
(cherry picked from commit 6f93eeb0ba8c4af5c96d1db36f184ffbc71c67ba)

Change-Id: Ie23e0c33e6efb303b183d3b2efce6866d0dda4e8
Reviewed-on: https://gerrit.libreoffice.org/34887
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>